Improve fix to control bar alt text vertical align issue

--- a/src/css/flags/ads.less
+++ b/src/css/flags/ads.less
@@ -30,9 +30,8 @@
             display: inline-block;
             margin: 0 -0.5em;
             overflow: hidden;
-            position: relative;
             text-overflow: ellipsis;
-            top: 2px;
+            vertical-align: middle;
             white-space: nowrap;
         }
 
