--- a/src/css/flags/live.less
+++ b/src/css/flags/live.less
@@ -9,9 +9,8 @@
             display: inline-block;
             margin: 0 -0.5em 0;
             overflow: hidden;
-            position: relative;
             text-overflow: ellipsis;
-            top: 2px;
+            vertical-align: middle;
             white-space: nowrap;
         }
     }
